@@ -2,12 +2,9 @@ package com.platform.commons.filter;
 
 import com.platform.commons.client.CountryClient;
 import com.platform.commons.security.ReactiveSecurityDetailsHolder;
+import com.platform.commons.security.ReactiveSecurityHelper;
 import com.platform.commons.security.SecurityDetails;
-import com.platform.commons.security.SecurityTokenHelper;
-import com.platform.commons.security.SimplerSecurityDetails;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.log4j.Log4j2;
 import org.springframework.core.Ordered;
 import org.springframework.security.config.web.server.SecurityWebFiltersOrder;
 import org.springframework.security.core.GrantedAuthority;
@@ -23,58 +20,41 @@ import reactor.core.publisher.Mono;
  * @author Alex bob(<a href="https://github.com/vnobo">https://github.com/vnobo</a>)
  * @date Created by 2021/7/22
  */
-@Log4j2
 @RequiredArgsConstructor
-public class BeforeSecurityFilter implements WebFilter, Ordered {
+public record BeforeSecurityFilter(CountryClient countryClient) implements WebFilter, Ordered {
 
-  private final CountryClient countryClient;
-
-  @Override
-  public Mono<Void> filter(ServerWebExchange exchange, WebFilterChain chain) {
-    return Mono.defer(
-        () -> {
-          Mono<SecurityDetails> securityDetailsToken = securityDetailsToken(exchange);
-          exchange.getAttributes().put(SecurityDetails.class.getName(), securityDetailsToken);
-          return chain
-              .filter(exchange)
-              .contextWrite(
-                  ReactiveSecurityDetailsHolder.withSecurityDetailsContext(securityDetailsToken));
+    @Override
+    public Mono<Void> filter(ServerWebExchange exchange, WebFilterChain chain) {
+        return Mono.defer(() -> {
+            Mono<SecurityDetails> securityDetailsToken = securityDetailsToken(exchange);
+            exchange.getAttributes().put(SecurityDetails.class.getName(), securityDetailsToken);
+            return chain.filter(exchange).contextWrite(ReactiveSecurityDetailsHolder
+                    .withSecurityDetailsContext(securityDetailsToken));
         });
-  }
+    }
 
-  private Mono<SecurityDetails> securityDetailsToken(ServerWebExchange exchange) {
-    return this.loadToken(exchange).switchIfEmpty(generateToken(exchange));
-  }
+    private Mono<SecurityDetails> securityDetailsToken(ServerWebExchange exchange) {
+        return this.loadToken(exchange).switchIfEmpty(generateToken(exchange));
+    }
 
-  private Mono<SecurityDetails> loadToken(ServerWebExchange exchange) {
-    return exchange
-        .getSession()
-        .filter(
-            (session) ->
-                session.getAttributes().containsKey(SecurityTokenHelper.SECURITY_TOKEN_CONTEXT))
-        .mapNotNull((session) -> session.getAttribute(SecurityTokenHelper.SECURITY_TOKEN_CONTEXT));
-  }
+    private Mono<SecurityDetails> loadToken(ServerWebExchange exchange) {
+        return exchange.getSession().filter((session) -> session.getAttributes()
+                        .containsKey(ReactiveSecurityHelper.SECURITY_TOKEN_CONTEXT))
+                .mapNotNull((session) -> session.getAttribute(ReactiveSecurityHelper.SECURITY_TOKEN_CONTEXT));
+    }
 
-  private Mono<SecurityDetails> generateToken(ServerWebExchange exchange) {
-    return ReactiveSecurityContextHolder.getContext()
-        .flatMap(
-            securityContext ->
-                countryClient
-                    .loadSecurity(securityContext.getAuthentication().getName())
-                    .defaultIfEmpty(SimplerSecurityDetails.withDefault())
-                    .map(
-                        securityDetails ->
-                            securityDetails.authorities(
-                                securityContext.getAuthentication().getAuthorities().stream()
-                                    .map(GrantedAuthority::getAuthority)
-                                    .collect(Collectors.toList())
-                                    .toArray(new String[0]))))
-        .cast(SecurityDetails.class)
-        .delayUntil((securityDetails) -> SecurityTokenHelper.saveToken(exchange, securityDetails));
-  }
+    private Mono<SecurityDetails> generateToken(ServerWebExchange exchange) {
+        return ReactiveSecurityContextHolder.getContext()
+                .flatMap(securityContext -> countryClient.loadSecurity(securityContext.getAuthentication().getName())
+                        .map(securityDetails -> securityDetails.authorities(securityContext
+                                .getAuthentication().getAuthorities().stream()
+                                .map(GrantedAuthority::getAuthority).toList().toArray(new String[0]))))
+                .cast(SecurityDetails.class)
+                .delayUntil((securityDetails) -> ReactiveSecurityHelper.saveToken(exchange, securityDetails));
+    }
 
-  @Override
-  public int getOrder() {
-    return SecurityWebFiltersOrder.AUTHORIZATION.getOrder() + 100;
-  }
+    @Override
+    public int getOrder() {
+        return SecurityWebFiltersOrder.AUTHORIZATION.getOrder() + 100;
+    }
 }
